[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Label

signal pressed

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_Name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = -20.0
margin_top = 1.0
margin_right = 20.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.0392157, 0.447059, 0.666667, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.172549, 0.27451, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 2 )
text = "Foundational"
align = 1
valign = 1
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Singleplayer" type="Button" parent="."]
margin_left = 50.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 120.0
text = "SinglePlayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Options" type="Button" parent="."]
margin_left = 50.0
margin_top = 200.0
margin_right = 200.0
margin_bottom = 220.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Quit" type="Button" parent="."]
margin_left = 50.0
margin_top = 300.0
margin_right = 200.0
margin_bottom = 320.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
